--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <header>
-        <img class="logo" src="./assets/AAlura.svg" alt="A Alura">
+        <a href="/">
+            <img class="logo" src="./assets/AAlura.svg" alt="A Alura">
+        </a>
     </header>
     
     <main class="page">
