--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <a href="/">
+        <a href="https://cristianorodr.github.io/criptografia/">
             <img class="logo" src="./assets/AAlura.svg" alt="A Alura">
         </a>
     </header>
